# IT

./: CMakeLists.txt  otchet.docx
Lab1/: CMakeLists.txt
Lab1/Task1/: CMakeLists.txt  Task1.c
Lab1/Task2/: CMakeLists.txt  task2.c
Lab1/Task3/: CMakeLists.txt  Task3.c
Lab1/Task4/: CMakeLists.txt  Task4.c
Lab1/Task5/: CMakeLists.txt  Task5_func.c  Task5_main.c
Lab1/Task6/: CMakeLists.txt  Task6_func.c  Task6_main.c
Lab1/Task7/: CMakeLists.txt  Task7_func.c  Task7_main.c  func.h
Lab1/Task8/: CMakeLists.txt  Task7_func.c  Task7_main.c
Lab2/: CMakeLists.txt  func.c  header.h  isInArea.c  main.c
Lab2/Task1/: Task1.c  isInArea.c
Lab3/: CMakeLists.txt  findFirstElement.c  findFirstNegativeElement.c  function.c  functions.h  main.c  print.c  summ.c  summ2.c
Lab3/dowhile/: CMakeLists.txt  findFirstElement.c  findFirstNegativeElement.c  main.c  print.c  summ.c  summ2.c
Lab3/for/: CMakeLists.txt  findFirstNegativeElement.c  functions.h  main.c  summ2.c
Lab3/while/: CMakeLists.txt  findFirstElement.c  findFirstNegativeElement.c  main.c  print.c  summ.c  summ2.c
Lab4/: CMakeLists.txt  Task1.c  Task2.c  main.c
Lab5/: CMakeLists.txt  header.h  main.c  task1.c
Lab6/: CMakeLists.txt  zachetka.c
Lab7/: CMakeLists.txt  header.h  lab4.c  lab5.c  lab6_mod.c  lab7.c  main.c  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c
